--- a/GXPEngine/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine/GXPEngine.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Arena.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="LineOfSight.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
     <Compile Include="GXPEngine\AddOns\TiledLoader.cs" />
