--- a/GXPEngine/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine/GXPEngine.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arena.cs" />
+    <Compile Include="EnemySpawnPoint.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="LineOfSight.cs" />
     <Compile Include="GameManager.cs" />
