--- a/GXPEngine/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine/GXPEngine.csproj
@@ -39,10 +39,12 @@
     <Compile Include="Arena.cs" />
     <Compile Include="EnemySpawnPoint.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="GXPEngine\Button.cs" />
     <Compile Include="LineOfSight.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
     <Compile Include="GXPEngine\AddOns\TiledLoader.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="MyGame.cs" />
     <Compile Include="GXPEngine\Canvas.cs" />
     <Compile Include="GXPEngine\Game.cs" />
