--- a/GXPEngine/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine/GXPEngine.csproj
@@ -39,7 +39,7 @@
     <Compile Include="Arena.cs" />
     <Compile Include="EnemySpawnPoint.cs" />
     <Compile Include="Enemy.cs" />
-    <Compile Include="GXPEngine\Button.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="LineOfSight.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
