--- a/GXPEngine/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine/GXPEngine.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Arena.cs" />
     <Compile Include="AudioPlayer.cs" />
     <Compile Include="Enemies\EnemyAnimation.cs" />
+    <Compile Include="Enemies\EnemyType.cs" />
     <Compile Include="Enemies\FastEnemy.cs" />
     <Compile Include="Enemies\HomingEnemy.cs" />
     <Compile Include="Enemies\SlowEnemy.cs" />
